--- a/opacity_script.ipynb
+++ b/opacity_script.ipynb
@@ -60,6 +60,37 @@
     "im.putdata(new_pixels)\n",
     "im.save('./src/assets/sprites/output2.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56ac6d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\noddl\\AppData\\Local\\Temp\\ipykernel_292344\\421353862.py:5: RuntimeWarning: overflow encountered in scalar add\n",
+      "  print(x + (u32 + 1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "u32 = np.uint32(123)\n",
+    "\n",
+    "print(x + (u32 + np.uint32(1)))"
+   ]
   }
  ],
  "metadata": {
