--- a/opacity_script.ipynb
+++ b/opacity_script.ipynb
@@ -78,18 +78,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\noddl\\AppData\\Local\\Temp\\ipykernel_292344\\421353862.py:5: RuntimeWarning: overflow encountered in scalar add\n",
-      "  print(x + (u32 + 1))\n"
+      "C:\\Users\\noddl\\AppData\\Local\\Temp\\ipykernel_292344\\1198559727.py:6: RuntimeWarning: overflow encountered in scalar add\n",
+      "  print(x + (u32 + np.uint32(1)))\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "x = np.uint32(0xFFFFFFFF)\n",
-    "u32 = np.uint32(123)\n",
-    "\n",
-    "print(x + (u32 + np.uint32(1)))"
+    "x = 123\n",
+    "print(x)"
    ]
   }
  ],
